November 20th, 2017
- James: Finished keyboard and timer interrupt code, handling of specific codes with respect to game logic.
- David: Initial drawing code in c

November 21st, 2017
- James: After troubles in the lab I got the keyboard code working in the simulator.

November 25th, 2017
- James: Player movement left/right works in simulator and is bounded to playing field. Player firing works, placeholder for enemy fire. Added collision between enemy bullets and player, and basic collision between enemy bullets and shield.

November 26th, 2017
- James: Added a collision checker for the shields 
- David: - draw a 'sprite' 
         - initialize invaders for level
         - draw invaders
         - move invaders
         - kill invader
         - initial player bullet invader collision detection

November 28th, 2017
- James: Set player sprite to draw, did a pass on
collision, should work with all bullets colliding with player and shields

December 1st, 2017
- James: Got pixel destruction on shields working, added UI with player life
loss/restart on no lives. Wrote bomb algorithm for shield destruction but not
tested.

December 2nd, 2017
- James: Wrote player explosion animation w/ respawn time